# chattergpt

./: .gitignore  README.md  pyproject.toml
chattergpt/: __init__.py  __main__.py  app.py  app.tcss  config.py  models.py  store.py
chattergpt/backend/: base.py  chatgpt_web.py
chattergpt/widgets/: composer.py  history.py  sidebar.py
